# Velib

./: .env.example  .gitignore  pyproject.toml
API_Docs/: Open_Data_Paris.md  meteo.md
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: fct_velib_meteo.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_meteo.sql  stg_velib.sql
ingestion/: Dockerfile  main.py  pyproject.toml
ingestion/fetchers/: meteo_fetcher.py  velib_fetcher.py
ingestion/src/velib_ingestion/: config.py  db.py  logging_setup.py  main.py  runner.py
ingestion/src/velib_ingestion/entrypoints/: meteo.py  velib.py
ingestion/src/velib_ingestion/fetchers/: meteo_fetcher.py  velib_fetcher.py
pgsql/: 01_init.sql
src/velib/: __init__.py
