[project]
name = "velib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "surybang", email = "hos.fabien@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
velib = "velib:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
